--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Proyecto</title>
+  <title>Daigaku No Anime</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/originals/c7/27/05/c727057036e3fdb48e32bf812d95182a.png">
 </head>
-<body>
+<body style="background-color: black;">
   <app-root></app-root>
 </body>
 </html>
